--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Time Capsule</title>
+  <title>04/02/2023</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-  <h1>My Time Capsule</h1>
+  <h1>Happy Valentines Day</h1>
 
   <div id="timeCapsule">
     <div id="imageContainer">
