--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   <div id="timeCapsule">
     <div id="imageContainer">
       <!-- Add your images here with additional img tags -->
-      <img src="image1.jpg" alt="Image 1">
-      <img src="image2.jpg" alt="Image 2">
-      <img src="image3.jpg" alt="Image 3">
+      <img src="static/image1.jpg" alt="Image 1">
+      <img src="static/image2.jpg" alt="Image 2">
+      <img src="static/image3.jpg" alt="Image 3">
     </div>
     <button id="prev" onclick="prevImage()">‹</button>
     <button id="next" onclick="nextImage()">›</button>
