--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div id="timeCapsule">
     <div id="imageContainer">
       <!-- Add your images here with additional img tags -->
-      <img src="static/image1.jpg" alt="Image 1">
+      <img src="static/image1.jpeg" alt="Image 1">
       <img src="static/image2.jpg" alt="Image 2">
       <img src="static/image3.jpg" alt="Image 3">
     </div>
