--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div id="imageContainer">
       <!-- Add your images here with additional img tags -->
       <img src="static/image1.jpeg" alt="Image 1">
-      <img src="static/image2.jpg" alt="Image 2">
-      <img src="static/image3.jpg" alt="Image 3">
+      <img src="static/image2.jpeg" alt="Image 2">
+      <img src="static/image3.jpeg" alt="Image 3">
     </div>
     <button id="prev" onclick="prevImage()">‹</button>
     <button id="next" onclick="nextImage()">›</button>
