--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <img src="static/image2.jpeg" alt="Image 1">
       <img src="static/image6.jpeg" alt="Image 2">
       <img src="static/image12.jpeg" alt="Image 3">
+      <img src="static/image1.jpeg">
     </div>
     <button id="prev" onclick="prevImage()">‹</button>
     <button id="next" onclick="nextImage()">›</button>
