--- a/index.html
+++ b/index.html
@@ -60,10 +60,18 @@
   <div id="timeCapsule">
     <div id="imageContainer">
       <!-- Add your images here with additional img tags -->
-      <img src="static/image2.jpeg" alt="Image 1">
-      <img src="static/image6.jpeg" alt="Image 2">
-      <img src="static/image12.jpeg" alt="Image 3">
       <img src="static/image1.jpeg">
+      <img src="static/image2.jpeg" alt="Image 1">
+      <img src="static/image3.jpeg">
+      <img src="static/image4.jpeg">
+      <img src="static/image5.jpeg">
+      <img src="static/image6.jpeg" alt="Image 2">
+      <img src="static/image7.jpeg">
+      <img src="static/image8.jpeg">
+      <img src="static/image9.jpeg">
+      <img src="static/image10.jpeg">
+      <img src="static/image11.jpeg">
+      <img src="static/image12.jpeg" alt="Image 3">
     </div>
     <button id="prev" onclick="prevImage()">‹</button>
     <button id="next" onclick="nextImage()">›</button>
