--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-  <h1>Happy Valentines Day</h1>
+  <h1>Will You Be My Valentine?</h1>
 
   <div id="timeCapsule">
     <div id="imageContainer">
